--- a/src/app/components/contact-us/contact-us.component.html
+++ b/src/app/components/contact-us/contact-us.component.html
@@ -132,6 +132,7 @@
                     contactForm.controls['recaptcha'].invalid &&
                     contactForm.controls['recaptcha'].touched
                   "
+                  style="color: red"
                 >
                   Please verify that you're not a robot.
                 </div>
@@ -166,7 +167,7 @@
             <div class="col-12 d-flex">
               <i class="bi bi-geo-alt-fill"></i>
               <div class="ms-3">
-                <h5>Head OFfice</h5>
+                <h5>Head Office</h5>
                 <p>71-75 Shelton Street Convent Garden London WC2H 9JQ - UK</p>
               </div>
             </div>
