--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -200,9 +200,8 @@
             <h3 style="color: #fff !important" class="mt-5">Our Moto</h3>
             <p style="color: #fff !important" class="mt-2">
               "Empowering Innovation, Driving Success." We believe in harnessing
-              the power of cutting-edge technology to achieve remarkable
-              outcomes for our clients. Our dedication to excellence drives our
-              every endeavor.
+              the power of technology to achieve remarkable outcomes for our
+              clients. Our dedication to excellence drives our every endeavor.
             </p>
           </div>
         </div>
