--- a/src/app/components/contact-us/contact-us.component.html
+++ b/src/app/components/contact-us/contact-us.component.html
@@ -157,10 +157,10 @@
             At Seamless Infotech & Advertising Ltd., we believe in the power of
             seamless communication to drive global success. Our expert team is
             dedicated to delivering innovative digital solutions that transform
-            businesses and foster global growth. Whether you need cutting-edge
-            software, dynamic mobile apps, or a stunning website, we're here to
-            help you navigate the digital landscape with ease. Connect with us
-            today to discover how we can make a lasting impact together.
+            businesses and foster global growth. Whether you need software,
+            dynamic mobile apps, or a stunning website, we're here to help you
+            navigate the digital landscape with ease. Connect with us today to
+            discover how we can make a lasting impact together.
           </p>
 
           <div class="row pt-4">
