--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -34,7 +34,7 @@
           <div class="col-12 col-sm-12 col-md-4 text-center text-md-start">
             <img src="assets\images\seamless-logo.png" class="image-fluid" />
             <p class="mt-2 mt-md-1">
-              Seamless Infotech Advertising Ltd delivers cutting-edge digital
+              Seamless Infotech Advertising Ltd delivers digital
               solutions, from software development to mobile apps and website
               design. Empowering businesses with technology to drive success.
             </p>
