--- a/src/app/components/service/service.component.html
+++ b/src/app/components/service/service.component.html
@@ -37,11 +37,11 @@
           <h2>Empowering Businesses with Innovative Digital Solutions</h2>
           <p class="mt-4">
             At Seamless Infotech Advertising Ltd., we specialize in delivering
-            cutting-edge digital solutions tailored to modern business needs.
-            From bespoke software development and mobile app creation to
-            comprehensive website design and IT consultancy, our expertise
-            covers the full spectrum of services to drive your business forward
-            and achieve digital excellence.
+            digital solutions tailored to modern business needs. From bespoke
+            software development and mobile app creation to comprehensive
+            website design and IT consultancy, our expertise covers the full
+            spectrum of services to drive your business forward and achieve
+            digital excellence.
           </p>
           <hr />
           <div class="row mt-4">
