--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -327,9 +327,8 @@
             <h3 style="color: #fff !important" class="mt-5">Our Moto</h3>
             <p style="color: #fff !important" class="mt-2">
               "Empowering Innovation, Driving Success." We believe in harnessing
-              the power of cutting-edge technology to achieve remarkable
-              outcomes for our clients. Our dedication to excellence drives our
-              every endeavor.
+              the power of technology to achieve remarkable outcomes for our
+              clients. Our dedication to excellence drives our every endeavor.
             </p>
           </div>
         </div>
@@ -360,11 +359,11 @@
           <h2>Empowering Businesses with Innovative Digital Solutions</h2>
           <p class="mt-4">
             At Seamless Infotech & Advertising Ltd., we specialize in delivering
-            cutting-edge digital solutions tailored to modern business needs.
-            From bespoke software development and mobile app creation to
-            comprehensive website design and IT consultancy, our expertise
-            covers the full spectrum of services to drive your business forward
-            and achieve digital excellence.
+            digital solutions tailored to modern business needs. From bespoke
+            software development and mobile app creation to comprehensive
+            website design and IT consultancy, our expertise covers the full
+            spectrum of services to drive your business forward and achieve
+            digital excellence.
           </p>
           <hr />
           <div class="row mt-4">
