--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 @import "@ng-select/ng-select/themes/default.theme.css";
-@import 'ngx-toastr/toastr';
+@import "ngx-toastr/toastr";
 
 .app-loader {
   position: fixed;
@@ -76,7 +76,7 @@ h2 {
 }
 h6 {
   color: var(--primary-color);
-  font-size: 12px;
+  font-size: 14px;
 }
 /* -------------Typography------------ */
 a {
